--- a/simplesharepointmodules/index.html
+++ b/simplesharepointmodules/index.html
@@ -99,6 +99,8 @@
 					<div>
 						<p>This library contains functions to provision common SimpleSharepoint sites. The most
 						notable function is be <a href="SSP.PorteoLibrary/index.html#Build-PorteoSite">Build-PorteoSite</a></p>
+						<h3>Build-PorteoSite</h3>
+						<p>This function builds either an initial Porteo Site, which has </p>
 					</div>
 				</div>
 			</div>
