--- a/simplesharepointmodules/index.html
+++ b/simplesharepointmodules/index.html
@@ -153,6 +153,66 @@
 					</div>
 				</div>
 			</div>
+			<div class="row-fluid">
+
+				<div class="col-lg-9 col-md-8 col-sm-7 col-xs-12">
+					<div>
+						<div class="page-header">
+							<h2>Creating Multiple Sites from a Site Template</h2>
+							<p>
+								This example illustrates creating the template file for an existing site and then
+								replicating it using the functions <a href="SSP.PorteoLibrary/index.html#Build-PorteoSiteListFromTemplate">Build-PorteoSiteListFromTemplate</a>
+							</p>
+							<pre class="brush: ps">
+#
+# Emanuel Group ArrayList of sites you want to create using url and title pairs.
+#
+$sites = @(
+    @("tls", "Top Level Site"),
+    @("emanuel-health", "Emanuel Health"),
+    @("prs-global", "PRS Global"),
+    @("epic-consulting", "Epic Consulting"),
+    @("t1-construction", "T1 Construction"),
+    @("phenix-salon", "Phenix Salon"),
+    @("manna-foundation", "Manna Foundation"),
+    @("resource-center", "Resource Center"),
+
+    @("emanuel-health", "Emanuel Health"),
+    @("emanuel-health/beaver-dam-nursing-and-rehab", "Beaver Dam Nursing and Rehab"),
+    @("emanuel-health/the-cottages-of-clayton", "The Cottages of Clayton"),
+    @("emanuel-health/elizabeth-care-center", "Elizabeth Care Center"),
+    @("emanuel-health/harbor-healthcare-of-ironton", "Harbor Healthcare of Ironton"),
+    @("emanuel-health/madison-park", "Madison Park"),
+    @("emanuel-health/mountain-manor-of-paintsville", "Mountain Manor of Paintsville"),
+    @("emanuel-health/emanuel-pointe", "Emanuel Pointe")
+)
+
+### Get/Create the Source Template File
+$srcSite = "https://theemanuelgroups0.sharepoint.com/sites/Department-template"
+$srcEmail = "edg@simplesharepoint.com"
+$srcPlainPassword = "great_password"
+
+$srcSecurePassword = $srcPlainPassword | ConvertTo-SecureString -AsPlainText -Force
+$srcCreds = New-Object System.Management.Automation.PSCredential ($srcEmail, $srcSecurePassword)
+
+$srcConn = Connect-PnPOnline -Url $srcSite  -Credentials $srcCreds -ReturnConnection
+
+# Note, Windows may need another place for this file, use "C:\somwhere\template.pnp". Make sure it ends in ".pnp"
+$template = Get-SSPSiteTemplate -FileName "/tmp/template.pnp" -SrcConnection $srcConn
+
+## Now create each site listed above in the tennant from the template.
+## Note: this admin site may be completely different, different credentials, etc.
+$admSite = "https://theemanuelgroups0-admin.sharepoint.com"
+$owner = "edg@simplesharepoint.com"
+$PlainPassword = "great_password"
+
+$SecurePassword = $PlainPassword | ConvertTo-SecureString -AsPlainText -Force
+$dstCreds = New-Object System.Management.Automation.PSCredential ($owner, $SecurePassword)
+
+Build-PorteoSiteListFromTemplate -Template $template -SiteList $sites -TenantUrl $admSite -Credentials $dstCreds `
+             -Owner $owner -Type "TeamSite"
+							</pre>
+						</div>
 	</div>
 	</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" ></script>
