--- a/simplesharepointmodules/index.html
+++ b/simplesharepointmodules/index.html
@@ -159,6 +159,7 @@
 					<div>
 						<div class="page-header">
 							<h2>Creating Multiple Sites from a Site Template</h2>
+						</div>
 							<p>
 								This example illustrates creating the template file for an existing site and then
 								replicating it using the functions <a href="SSP.PorteoLibrary/index.html#Build-PorteoSiteListFromTemplate">Build-PorteoSiteListFromTemplate</a>
@@ -214,6 +215,8 @@ Build-PorteoSiteListFromTemplate -Template $template -SiteList $sites -TenantUrl
 							</pre>
 						</div>
 	</div>
+	</div>
+		</div>
 	</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" ></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js" charset="utf-8"></script>
